<resources>
    <string name="app_name">TodoApp</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="welcome_in">Welcome in:</string>
    <string name="todo_app">Todo app</string>
    <string name="new_category">New category</string>
    <string name="settings">Settings</string>
    <string name="delete_category">Delete category</string>
    <string name="name">Name</string>
    <string name="due_date">Due date</string>
    <string name="date_time">2019/22/05 @ 12:00</string>
    <string name="not_set">Not set</string>
    <string name="new_task">New task</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Category\'s</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_priority">Priority</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_alphabetical_a_z">Alphabetical (A-Z)</string>
    <string name="menu_alphabetical_z_a">Alphabetical (Z-A)</string>
    <string name="menu_created_newest_first">Created (Newest first)</string>
    <string name="menu_created_oldest_first">Created (Oldest first)</string>
    <string name="menu_due_date_newest_first">Due date (Newest first)</string>
    <string name="menu_due_date_oldest_first">Due date (Oldest first)</string>
    <string name="task_name">Task Name</string>
    <string name="reminder">Reminder</string>
    <string name="highlight">Highlight</string>
    <string name="priority">Priority</string>
    <string name="completed">Completed</string>
    <string name="subtitle">Subtitle</string>
    <string name="mark_as_done">Mark as done</string>


    <string name="step_of">Step %1$d of %2$d</string>
    <string name="section_format">Section : %1$d</string>

    <string name="about_text">The best android implementation of material UI components. This app implemented based on Google Design Guidelines.
    </string>

    <string name="version_unknown">Unknown</string>
    <string name="app_version">Version</string>
    <string name="default_notification_channel_id">Default</string>
    <string name="description">Description</string>
    <string name="none">None</string>
    <string name="no_reminder_set">No reminder set</string>
    <string name="favorite">Favorite</string>
    <string name="et">\@</string>
    <string name="unset">UNSET</string>
    <string name="category">Category</string>
</resources>
