<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/delete_category"
        android:icon="@drawable/ic_delete_white_24"
        android:title="@string/delete_category"
        app:showAsAction="ifRoom" />

    <group android:id="@+id/sort_group"
        android:checkableBehavior="single">

        <item android:id="@+id/menu_none"
            android:title="@string/none"
            android:checked="true" />

        <item android:id="@+id/menu_priority"
            android:title="@string/menu_priority" />

        <item android:id="@+id/menu_favorite"
            android:title="@string/menu_favorite" />

        <item android:id="@+id/menu_alphabetical_a_z"
            android:title="@string/menu_alphabetical_a_z" />

        <item android:id="@+id/menu_alphabetical_z_a"
            android:title="@string/menu_alphabetical_z_a" />

        <item android:id="@+id/menu_created_newest_first"
            android:title="@string/menu_created_newest_first" />

        <item android:id="@+id/menu_created_oldest_first"
            android:title="@string/menu_created_oldest_first" />

        <item android:id="@+id/menu_due_date_newest_first"
            android:title="@string/menu_due_date_newest_first" />

        <item android:id="@+id/menu_due_date_oldest_first"
            android:title="@string/menu_due_date_oldest_first" />
    </group>
</menu>
